# reactos

dll/directx/wine/d3d12/: CMakeLists.txt
dll/directx/wine/d3dcompiler_39/: CMakeLists.txt
dll/directx/wine/d3dcompiler_47/: CMakeLists.txt
dll/directx/wine/dxgi/: CMakeLists.txt
dll/directx/wine/dxva2/: CMakeLists.txt
dll/ntdll/ldr/: ldrcor.c
dll/win32/advapi32/wine/: lookup.c
dll/win32/bcp47langs/: CMakeLists.txt  bcp47langs.rc  main.c
dll/win32/combase/: CMakeLists.txt
dll/win32/coremessaging/: CMakeLists.txt  coremessaging.rc  coremessaging.spec  main.c
dll/win32/kernel32/wine/: resource.c  sync.c
dll/win32/kernelbase/: kernelbase.spec
dll/win32/kernelbase/kernel32/client/: heapmem.c  proc.c  time.c
dll/win32/kernelbase/kernel32/client/file/: iocompl.c
dll/win32/kernelbase/kernel32/kernel32_vista/: vista.c
dll/win32/kernelbase/kernel32/wine/: timezone.c
dll/win32/ktmw32/: CMakeLists.txt  ktmw32.rc  ktmw32_main.c
dll/win32/mmdevapi/: DeviceEnumerator.cpp  factory.cpp
dll/win32/profapi/: CMakeLists.txt  profapi.rc  profapi.spec
dll/win32/qwave/: CMakeLists.txt  main.c  qwave.rc
dll/win32/rstrtmgr/: CMakeLists.txt  main.c  rstrtmgr.rc
dll/win32/setupapi/: prop.c
dll/win32/vcruntime140/: CMakeLists.txt
dll/win32/wevtapi/: CMakeLists.txt  main.c  wevtapi.rc
drivers/storage/mountmgr/: device.c
modules/rostests/apitests/ntdll/: RtlWaitOnAddress.c
ntoskrnl/ex/: stubs.c
sdk/include/psdk/tmp69280720/: widl-00000000  widl-00000001  widl-0000000b  widl-0000000c
sdk/lib/rtl/: wake.c  xcontext.c
